Bug 330126 - tooltips sometimes hover the inline-renaming
Summary: tooltips sometimes hover the inline-renaming
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: tooltip (other bugs)
Version First Reported In: 4.12.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-18 14:26 UTC by H.H.
Modified: 2014-01-20 19:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.H. 2014-01-18 14:26:04 UTC
when I mark a file for inline-renaming, then immediatly move the mouse pointer a little bit up hovering a file above, then the showing tooltip hovers the inline-renaming, and I first have to abort the renaming-operation, and start again.

tooltips should hide when inline-editing is active.

Reproducible: Always
Comment 1 Frank Reininghaus 2014-01-18 16:43:07 UTC
Thanks for the bug report. I agree that the tool tip should be hidden when an item is being renamed.
Comment 2 Emmanuel Pescosta 2014-01-20 13:36:45 UTC
Review-Request: https://git.reviewboard.kde.org/r/115146/
Comment 3 Emmanuel Pescosta 2014-01-20 16:48:17 UTC
Git commit 8007143f341f3728ec6232542c13535d745561eb by Emmanuel Pescosta.
Committed on 20/01/2014 at 16:41.
Pushed by emmanuelp into branch 'KDE/4.12'.

Don't show tooltips while inline-renaming.

FIXED-IN: 4.12.2
REVIEW: 115146

M  +2    -0    dolphin/src/views/dolphinview.cpp

http://commits.kde.org/kde-baseapps/8007143f341f3728ec6232542c13535d745561eb
Comment 4 H.H. 2014-01-20 19:51:35 UTC
thats great! thanks!