Don't show tooltips while inline-renaming.

FIXED-IN: 4.12.2
REVIEW: 115146
BUG: 330126